Initial commit on master

--- a/app/views/workarea/storefront/products/quickview.html.haml
+++ b/app/views/workarea/storefront/products/quickview.html.haml
@@ -1,3 +1,5 @@
 - cache "#{@product.cache_key}/quickview", expires_in: 1.hour do
-  %div{ class: "product-details--#{@product.template} product-details", itemscope: true, itemtype: 'http://schema.org/Product', data: { analytics: product_quickview_analytics_data(@product).to_json } }
+  = render_schema_org(product_schema(@product, related_products: @product.recommendations))
+
+  .product-details{ class: "product-details--#{@product.template}", data: { analytics: product_quickview_analytics_data(@product).to_json } }
     = render "workarea/storefront/products/templates/#{@product.template}", product: @product
